[Core] Don't use immutable lists as they cannot be deserialized from H2 DB using the generic collection serializer provided with Kryo